--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   # Backend Service
   - type: web
-    name: fin-secure-backend
+    name: fin-secure-server
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn server:app
@@ -13,7 +13,7 @@ services:
 
   # Frontend Service
   - type: web
-    name: fin-secure-frontend
+    name: fin-secure
     env: static
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/dist
